-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.15.2
-
None
-
7a2b97fc4765ed17c494b39fe4fbc2297f0c602b (qt/qtbase/5.15) e0d52982cf319132e7b0f81da716ff02465176bf (qt/qtconnectivity/dev)
qnearfieldtarget.cpp: In member function 'bool QNearFieldTarget::RequestId::operator<(const QNearFieldTarget::RequestId&) const': qnearfieldtarget.cpp:239:14: error: ambiguous overload for 'operator<' (operand types are 'const QSharedDataPointer<QNearFieldTarget::RequestIdPrivate>' and 'const QSharedDataPointer<QNearFieldTarget::RequestIdPrivate>') 259: qnearfieldtarget.cpp:239:14: error: ambiguous overload for 'operator<' (operand types are 'const QSharedDataPointer<QNearFieldTarget::RequestIdPrivate>' and 'const QSharedDataPointer<QNearFieldTarget::RequestIdPrivate>') return d < other.d; ^ qnearfieldtarget.cpp:239:14: note: candidate: operator<(const QNearFieldTarget::RequestIdPrivate*, const QNearFieldTarget::RequestIdPrivate*) <built-in> qnearfieldtarget.cpp:239:14: note: candidate: operator<(const QNearFieldTarget::RequestIdPrivate*, const QNearFieldTarget::RequestIdPrivate*) <built-in> qnearfieldtarget.cpp:239:14: note: candidate: operator<(const QNearFieldTarget::RequestIdPrivate*, const QNearFieldTarget::RequestIdPrivate*) <built-in> qnearfieldtarget.cpp:239:14: note: candidate: operator<(int, int) <built-in> qcc -Vgcc_ntoarmv7le -c -Wc,-include -Wc,.pch/Qt5Bluetooth -mfpu=neon -Wno-psabi -lang-c++ -O2 -fstack-protector-strong -Wc,-std=gnu++1y -fvisibility=hidden -fvisibility-inlines-hidden -Wall -W -Wvla -Wdate-time -D_REENTRANT -fPIC -shared -DQT_NO_LINKED_LIST -DQT_NO_FOREACH -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_LINKED_LIST -DQT_NO_FOREACH -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_BLUETOOTH_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_DEPRECATED_WARNINGS_SINCE=0x060000 -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_CORE_LIB -I. -I../../include -I../../include/QtBluetooth -I../../include/QtBluetooth/5.15.2 -I../../include/QtBluetooth/5.15.2/QtBluetooth -I/home/qt/work/install/include/QtCore/5.15.2 -I/home/qt/work/install/include/QtCore/5.15.2/QtCore -I/home/qt/work/install/include -I/home/qt/work/install/include/QtCore -I.moc -I/opt/qnx700/target/qnx7/usr/include/openssl1_1 -I/opt/qnx700/target/qnx7/usr/include -I/opt/qnx700/target/qnx7/usr/include/freetype2 -I/home/qt/work/install/mkspecs/qnx-armle-v7-qcc -o .obj/qbluetoothaddress.o qbluetoothaddress.cpp cc: /opt/qnx700/host/linux/x86_64/usr/lib/gcc/arm-unknown-nto-qnx7.0.0eabi/5.4.0/cc1plus error 1 Makefile:2201: recipe for target '.obj/qnearfieldtarget.o' failed make[2]: *** [.obj/qnearfieldtarget.o] Error 1
Details: https://testresults.qt.io/coin/integration/qt/qt5/tasks/1602712089
Tested changes (refs/builds/qtci/5.15/1602712087):
https://codereview.qt-project.org/c/qt/qt5/+/317428/1 Update submodules on '5.15' in qt/qt5
For Gerrit Dashboard: QTBUG-87611 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
317292,3 | Revert "Fix detach on bool check of QSharedDataPointer" | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |
317504,3 | Fix operator ambiguity | dev | qt/qtconnectivity | Status: MERGED | +2 | 0 |