Fix operator ambiguity

This was caused by 182760e84d19df726418cb79da37636cdb6ff49d

Fixes: QTBUG-87611
Change-Id: I81aafc4b8efa1c72265864f798fb89a277a463cd
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
Reviewed-by: Giuseppe D'Angelo <giuseppe.dangelo@kdab.com>